# wgpui

./: Cargo.toml  README.md
.claude/: settings.local.json
examples/: karaoke_app.rs  karaoke_text.rs  prelude.rs  text_gradients.rs
examples/bench/: paths_bench.rs  pattern.rs
examples/learn/: blur_showcase.rs  emoji_display.rs  smooth_scrolling.rs  text.rs  virtual_list.rs  wgpu_surface.rs  wgpu_surface_basic.rs  wgpu_surface_quad.rs  wgpu_surface_stress.rs
examples/legacy/: gradient.rs  input.rs
src/: app.rs  color.rs  platform.rs  scene.rs  style.rs  styled.rs  taffy.rs  text_system.rs  window.rs
src/app/: context.rs  test_context.rs
src/elements/: div.rs  img.rs  list.rs  mod.rs  smooth_scroll.rs  svg.rs  text.rs  uniform_list.rs  virtual_list.rs  wgpu_surface.rs
src/platform/: app_menu.rs  cross.rs
src/platform/cross/: dispatcher.rs  keyboard.rs  platform.rs  render_context.rs  renderer.rs  resize_detector.rs  surface_registry.rs  text_system.rs  window.rs
src/platform/cross/shaders/: backdrop_blur.wgsl  mono_sprites.wgsl  quads.wgsl
src/platform/test/: dispatcher.rs  platform.rs  window.rs
src/text_system/: line.rs  line_layout.rs  line_wrapper.rs
